@@ -240,10 +240,6 @@
 ;; A few tests call DISASSEMBLE. Make it work without user intervention.
 (setf (ext:getenv "PAGER") "cat")
 
-;; Avoid floating-point computation warnings that bloat the log file.
-(setq custom:*warn-on-floating-point-contagion* nil)
-(setq custom:*warn-on-floating-point-rational-contagion* nil)
-
 ;; Then the tests.
 (load "gclload2.lsp")
 
